--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,6 @@ terraform.rc
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform,python,visualstudiocode
+
+
+cloudsdp-*.json
