--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+google-cloud-bigquery = "^3.11.4"
+google-cloud-run = "^0.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
