--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.9"
 google-cloud-bigquery = "^3.11.4"
 google-cloud-run = "^0.9.1"
+deepdiff = "^6.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
