FIX: publish workflow yaml

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,6 +21,4 @@ jobs:
 
       - name: Publish to Pypi
         id: publish
-        run: |
-        poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-        poetry publish --build
+        run: poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }} && poetry publish --build
