--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ deepdiff = "^6.3.1"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.3"
 pytest = "^7.4.0"
+coverage = "^7.3.0"
 
 [build-system]
 requires = ["poetry-core"]
