--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,4 +48,15 @@ jobs:
         run: poetry install --with dev
 
       - name: Run tests
-        run: poetry run pytest
+        run: poetry run poetry run coverage run --source cloudsdp -m pytest
+
+      - name: Coverage report
+        run: poetry run coverage report && poetry run coverage xml
+
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          files: coverage.xml
+          fail_ci_if_error: true
