--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ deepdiff = "^6.3.1"
 pre-commit = "^3.3.3"
 pytest = "^7.4.0"
 coverage = "^7.3.0"
+ipykernel = "^6.25.1"
+icecream = "^2.1.3"
+pytest-testmon = "^2.0.12"
 
 [build-system]
 requires = ["poetry-core"]
