--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ coverage = "^7.3.0"
 ipykernel = "^6.25.1"
 icecream = "^2.1.3"
 pytest-testmon = "^2.0.12"
+pandas = "^2.0.3"
 
 [build-system]
 requires = ["poetry-core"]
