--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.9"
 google-cloud-bigquery = "^3.11.4"
 google-cloud-run = "^0.9.1"
 deepdiff = "^6.3.1"
+pyarrow = "^12.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -23,6 +24,7 @@ ipykernel = "^6.25.1"
 icecream = "^2.1.3"
 pytest-testmon = "^2.0.12"
 pandas = "^2.0.3"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
